Modules with invalid "type" assertion should throw https://bugs.webkit.org/show_bug.cgi?id=246207 rdar://101166148

Reviewed by Justin Michaud and Alexey Shvayka.

This patch throws an error if invalid unsupported "type" import assertion is specified.

* JSTests/stress/invalid-import-assertion.js: Added.
* JSTests/stress/resources/empty.js: Added.
* Source/JavaScriptCore/API/JSAPIGlobalObject.mm:
(JSC::JSAPIGlobalObject::moduleLoaderImportModule):
* Source/JavaScriptCore/jsc.cpp:
(GlobalObject::moduleLoaderImportModule):
* Source/JavaScriptCore/runtime/Completion.cpp:
(JSC::retrieveTypeAssertion):
* Source/JavaScriptCore/runtime/Completion.h:
* Source/WebCore/bindings/js/ScriptModuleLoader.cpp:
(WebCore::ScriptModuleLoader::importModule):

Canonical link: https://commits.webkit.org/255574@main