Source/JavaScriptCore/runtime/Completion.h
@@ -25,6 +25,7 @@
 #include "CallData.h"
 #include "Identifier.h"
 #include "JSCJSValue.h"
+#include "ScriptFetchParameters.h"
 #include <wtf/FileSystem.h>
 #include <wtf/NakedPtr.h>
 
@@ -79,5 +80,6 @@ JS_EXPORT_PRIVATE JSValue linkAndEvaluateModule(JSGlobalObject*, const Identifie
 JS_EXPORT_PRIVATE JSInternalPromise* importModule(JSGlobalObject*, const Identifier& moduleName, JSValue referrer, JSValue parameters, JSValue scriptFetcher);
 
 JS_EXPORT_PRIVATE HashMap<RefPtr<UniquedStringImpl>, String> retrieveAssertionsFromDynamicImportOptions(JSGlobalObject*, JSValue, const Vector<RefPtr<UniquedStringImpl>>& supportedAssertions);
+JS_EXPORT_PRIVATE std::optional<ScriptFetchParameters::Type> retrieveTypeAssertion(JSGlobalObject*, const HashMap<RefPtr<UniquedStringImpl>, String>&);
 
 } // namespace JSC
