JSTests/stress/invalid-import-assertion.js
@@ -1,0 +1,1 @@
+import("./resources/empty.js", { assert: { type: "<invalid>" } }).then($vm.abort, function () {});
